Bug 74823 - FILEOPEN RTF table columns imported with wrong width
Summary: FILEOPEN RTF table columns imported with wrong width
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2014-02-11 06:31 UTC by Jacqueline Rahemipour
Modified: 2015-12-17 12:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample RTF document with table (13.02 KB, application/rtf)
2014-02-11 06:31 UTC, Jacqueline Rahemipour
Details
how it looks like in LibO 3.4.4 (27.12 KB, application/pdf)
2014-02-11 06:33 UTC, Jacqueline Rahemipour
Details
how it looks like in LibO 3.5.7 (21.12 KB, application/pdf)
2014-02-11 06:33 UTC, Jacqueline Rahemipour
Details
how it looks like in LibO 4.1.4 (63.79 KB, application/pdf)
2014-02-11 06:34 UTC, Jacqueline Rahemipour
Details
how it looks like in LibO 4.2.0 (49.05 KB, application/pdf)
2014-02-11 06:34 UTC, Jacqueline Rahemipour
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jacqueline Rahemipour 2014-02-11 06:31:11 UTC
I found some resolved fixed issues, but attached document is still wrongly imported in LibO 4.2.0.

Originally the columns have different widths, but after importing it in 4.2.0 all columns have the same width.

LibO 3.4.4: Import was correct
LibO 3.5.0: LibO crashes when opening the document
LibO 3.5.7: First column is as large as the page width
LibO 4.1.4: All columns have the same width
LibO 4.2.0: All columns have the same width

As this (and several other RTF issues) block migrations from 3.4 to 4.1.x it would be helpful to have a fix for a later 4.1.x version.
Comment 1 Jacqueline Rahemipour 2014-02-11 06:31:57 UTC
Created attachment 93828 [details]
sample RTF document with table
Comment 2 Jacqueline Rahemipour 2014-02-11 06:33:05 UTC
Created attachment 93829 [details]
how it looks like in LibO 3.4.4
Comment 3 Jacqueline Rahemipour 2014-02-11 06:33:46 UTC
Created attachment 93830 [details]
how it looks like in LibO 3.5.7
Comment 4 Jacqueline Rahemipour 2014-02-11 06:34:29 UTC
Created attachment 93831 [details]
how it looks like in LibO 4.1.4
Comment 5 Jacqueline Rahemipour 2014-02-11 06:34:55 UTC
Created attachment 93832 [details]
how it looks like in LibO 4.2.0
Comment 6 Miklos Vajna 2014-02-11 09:15:33 UTC
Hi Jacqueline,

Did you intentionally not add "regression" to keywords?

Thanks,

Miklos
Comment 7 Jacqueline Rahemipour 2014-02-12 10:47:58 UTC
Hi Miklos! No, that was just a mistake. :-)
Comment 8 Miklos Vajna 2014-04-05 13:32:58 UTC
Word says that "A table in this document has become corrupted" for the bugdoc. And it's indeed invalid what's inside: it defines cell properties, then resets them, then ends the row. It's just an accident that this worked with the 3.4 parser.

I'll still try to work this around, so it'll be as good as the 3.4 version was, but please talk to whoever produces such RTF documents to fix their broken output. ;-)
Comment 9 Commit Notification 2014-04-05 14:07:45 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a215b9a980e68f899ad548f780bbe5a1fec8732

fdo#74823 RTF import: work around wrong table column width on invalid input



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Miklos Vajna 2014-04-05 14:30:34 UTC
-4-2 review: https://gerrit.libreoffice.org/8871
Comment 11 Commit Notification 2014-04-07 10:33:38 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66e8622c794548db27cee3180c228cf287248154&h=libreoffice-4-2

fdo#74823 RTF import: work around wrong table column width on invalid input


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 12:37:39 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]