fdo#74823 RTF import: work around wrong table column width on invalid input

This scenario is not a valid one, Word doesn't handle it, either -- but
the old LO 3.4 parser did. So add minimal support for it to avoid
the regression.

Change-Id: Icc2e8d3bf314e9cadda57956668033aa6d092457